--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -147,11 +147,9 @@ p {
   text-align: center;
   padding: 0 20px;
 }
-
 .hero-content {
-  position: relative;
-  z-index: 2;
-  width: 100%;
+position: relative;
+  left: 450px;
 }
 
 .hero-text {
